// CCA Indexer — data model for dbdiagram.io

Table indexer_cursors {
  chain_id        bigint [pk, not null]
  last_block      bigint [not null]
  last_block_hash text   [not null]
  created_at      timestamptz [not null, default: `now()`]
  updated_at      timestamptz [not null, default: `now()`]
}

Table raw_events {
  chain_id     bigint  [not null]
  block_number bigint  [not null]
  block_hash   text    [not null]
  tx_hash      text    [not null]
  log_index    integer [not null]
  address      text    [not null]
  event_name   text    [not null]
  topics       jsonb   [not null]
  data         text    [not null]
  decoded      jsonb
  created_at   timestamptz [not null, default: `now()`]
  updated_at   timestamptz [not null, default: `now()`]

  indexes {
    (chain_id, block_number, tx_hash, log_index) [pk]
    (chain_id, block_number) [name: 'idx_raw_events_block']
    (chain_id, event_name)   [name: 'idx_raw_events_event']
  }
}

Table event_ccaf_auction_created {
  chain_id                 bigint  [not null]
  auction_address          text    [not null]
  token                    text    [not null]
  amount                   numeric [not null]
  currency                 text    [not null]
  tokens_recipient         text    [not null]
  funds_recipient          text    [not null]
  start_block              bigint  [not null]
  end_block                bigint  [not null]
  claim_block              bigint  [not null]
  tick_spacing             numeric [not null]
  validation_hook          text    [not null]
  floor_price              numeric [not null]
  required_currency_raised numeric [not null]
  block_number             bigint  [not null]
  tx_hash                  text    [not null]
  log_index                integer [not null]
  created_at               timestamptz [not null, default: `now()`]
  updated_at               timestamptz [not null, default: `now()`]

  indexes {
    (chain_id, auction_address) [pk]
  }
}

Table indexed_blocks {
  chain_id     bigint [not null]
  block_number bigint [not null]
  block_hash   text   [not null]
  parent_hash  text   [not null]
  created_at   timestamptz [not null, default: `now()`]
  updated_at   timestamptz [not null, default: `now()`]

  indexes {
    (chain_id, block_number) [pk]
  }
}

Table watched_contracts {
  chain_id bigint [not null]
  address  text   [not null]
  label      text   [not null, default: '']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (chain_id, address) [pk]
  }
}

// Relationships — all tables share chain_id as a logical partition key.
// raw_events and auctions reference indexed_blocks by (chain_id, block_number).
Ref: raw_events.(chain_id, block_number) > indexed_blocks.(chain_id, block_number)
Ref: event_ccaf_auction_created.(chain_id, block_number) > indexed_blocks.(chain_id, block_number)
